# backend

./: README.md  docker-compose.yml  pyproject.toml  railway.json  railway.toml
app/database/: connection.py
app/database/migrations/: env.py
app/repositories/: analysis_repo.py
app/services/agents/literature/: grammar_checker.py
scripts/: railway_init.sh  test_startup.sh
